# py-hash-chemistry

./: .gitignore  README.md  pyproject.toml
results/statistical_analysis/: statistical_report.md
results/statistical_analysis/fine_scan/: statistical_report.md
results/transition_scan/analysis/: transition_report.md
scripts/: aggregate_fine_scan.py  alt_hash_test.py  analyze_boundary_control.py  analyze_transition_scan.py  fast_scan.py  generate_gif.py  generate_paper_figures.py  generate_snapshots.py  injection_experiment.py  large_space_scaling.py  param_sensitivity.py  reproduce_figs_4_5_6.py  reproduce_paper.py  run_all_experiments.sh  run_all_experiments_v2.sh  run_all_final.sh  run_all_practical.sh  run_all_v3.sh  run_all_v4.sh  run_figs.sh  run_fine_scan_fast.sh  run_fine_scan_sequential.sh  run_fine_transition_scan.sh  run_large_space.sh  run_transition_scan.sh  statistical_analysis.py
src/: __init__.py  demo.py  simulation.py
