 [build-system]
 requires = ["setuptools>=61"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "hash-chemistry"
 version = "0.1.0"
 description = "Structural Cellular Hash Chemistry simulator rewritten in Python with JAX"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "jax>=0.4.23",
     "matplotlib>=3.8",
 ]
 authors = [
     { name = "Hiroki Horiguchi" }
 ]

 [project.optional-dependencies]
 dev = ["ruff>=0.6.9"]

 [tool.setuptools.packages.find]
 where = ["src"]
